--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li class="nav-item d-none d-sm-block">
         <a class="nav-link" href="#">新規登録</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item green">
         <a class="nav-link" href="#">ログイン</a>
       </li>
       <li class="nav-item d-none d-sm-block">
